--- a/files/.gitconfig
+++ b/files/.gitconfig
@@ -129,3 +129,9 @@
     sba = "!f() { git subtree add --prefix $2 $1 master --squash; }; f" 
 [core]
 	editor = vi
+[pager]
+	log = diff-highlight | less
+	show = diff-highlight | less
+	diff = diff-highlight | less
+[interactive]
+	diffFilter = diff-highlight
