--- a/files/.gitconfig
+++ b/files/.gitconfig
@@ -29,6 +29,7 @@
     default = current
 [diff]
   memonicprefix = true
+  renameLimit = 2000
 [branch]
   autosetuprebase = always
 [apply]
@@ -129,9 +130,3 @@
     sba = "!f() { git subtree add --prefix $2 $1 master --squash; }; f" 
 [core]
 	editor = vi
-[pager]
-	log = diff-highlight | less
-	show = diff-highlight | less
-	diff = diff-highlight | less
-[interactive]
-	diffFilter = diff-highlight
